--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="auto">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -130,8 +130,8 @@
     
     <div class="hero">
         <h2>Design Criativo e Funcional para Seus Projetos</h2>
-        <a href="#contact">Saber mais</a>
-    </div>
+        <a href="https://relaxxxx-lab.github.io/Portfolio/" target="_blank">Saber mais</a>
+    </div>    
     
     <section class="services">
         <h2>Serviços</h2>
